<resources>
    <string name="app_name">Project_app2</string>
    <string name="title_dashboard">Schedule</string>
    <string name="title_me">Me</string>
    <string name="title_class">Class</string>
    <string name="title_Home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homework">作业</string>
    <string name="final_exams">期末</string>
    <string name="question">提问</string>
    <string name="attendance">考勤</string>
    <string name="checking">检查</string>
    <string name="roll_call">点名</string>
    <string name="profile">资料</string>
    <string name="student_number">学号</string>
    <string name="enter_list_name">输入名单 </string>
    <string name="add">添加</string>
    <string name="finish">完成</string>
    <string name="enter_student_infos">输入学生信息</string>
</resources>

