<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@drawable/background_1"
    tools:context="com.example.lenvovo.projet_app2.first.Class_Fragment">

    <!-- TODO: Update blank fragment layout -->
   <ImageButton
       android:id="@+id/attendance"
       android:layout_width="300dp"
       android:layout_height="40dp"
       app:srcCompat="@drawable/ic_attendance"
       android:padding="5dp"
       android:layout_marginTop="20dp"
       android:layout_gravity="center_horizontal"
       android:background="@drawable/button"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendance"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        />
    <ImageButton
        android:id="@+id/question"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_question"
        android:padding="5dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="135dp"
        />
    <ImageButton
        android:id="@+id/final_exam"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_final_exam"
        android:padding="5dp"
        android:layout_marginTop="155dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_exams"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="205dp"
        />
    <ImageButton
        android:id="@+id/homework"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_homework"
        android:padding="5dp"
        android:layout_marginTop="230dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="275dp"
        />

</FrameLayout>
